syntax = "proto3";

package domain;

option go_package = "github.com/wisaitas/grpc-poc/internal/orchestrator/pb/gen;pbgen";

service DomainService {
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
  rpc GetUserList (GetUserListRequest) returns (GetUserListResponse);
}

// --- User Create ---
message CreateUserRequest {
    string first_name = 1;
    string last_name = 2;
    string email = 3;
    string password = 4;
  }
  
  message CreateUserResponse {
    string id = 1;
  }
  
  // --- User Get List ---
  message GetUserListRequest {
    int32 page = 1;
    int32 limit = 2;
  }
  
  message UserData {
      string id = 1;
      string first_name = 2;
      string last_name = 3;
      string email = 4;
  }
  
  message GetUserListResponse {
    repeated UserData users = 1;
    int64 total = 2;
  }

