syntax = "proto3";

package orchestrator;

option go_package = "github.com/wisaitas/grpc-poc/internal/orchestrator/pb/gen;pbgen";

import "google/api/annotations.proto";

message RegisterRequest {
    string email = 1;
    string first_name = 2;
    string last_name = 3;
    string password = 4;
    string confirm_password = 5;
}

message RegisterResponse {
    string token = 1;
}

service OrchestratorService {
    rpc Register (RegisterRequest) returns (RegisterResponse) {
        option (google.api.http) = {
            post: "/api/v1/auth/register"
            body: "*"
        };
    }
}